syntax = "proto3";

package Deposit;

message DepositInput { 
    int32 amount = 1;
    string currency = 2;
    string details = 3;
    string userId = 4;
}

message DepositResponse {
    int32 status = 1;
    repeated string error = 2;
}